# comfy-kitchen

./: README.md  plan.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
comfy_kitchen/: scaled_mm_v2.py
comfy_kitchen/backends/cuda/: CMakeLists.txt  __init__.py  dlpack_bindings.cpp
comfy_kitchen/backends/cuda/ops/: cublas_gemm_int8.cu  quantize_mxfp8.cu
comfy_kitchen/backends/cuda/ops/nunchaku/: Tensor.h  activation_kernels.cu  activation_kernels.h  common.h  dispatch_cutlass.h  dispatch_utils.h  gemm_base.cuh  gemm_batched.cu  gemm_batched.h  gemm_utils.cuh  gemm_w4a4_launch_impl.cuh  layernorm_kernels.cu  layernorm_kernels.h  layernorm_kernels_impl.cuh  lora.cuh  mma_earlycuda.cuh  nunchaku_ops.cu  reduction_utils.cuh  utils.cuh
comfy_kitchen/backends/eager/: __init__.py  quantization.py
comfy_kitchen/backends/triton/: __init__.py  quantization.py
comfy_kitchen/tensor/: __init__.py  base.py  fp8.py  int8.py  mxfp8_hybrid.py
samples/: int8_model_patcher.py  mxfp8_model_patcher.py  nvfp4_linear.py
tests/: test_int8.py  test_integration.py  test_qdq.py  test_tensor.py
